# equipment_location

./: .env  .gitignore  TRANSFER_LEARNING_GUIDE.md  config.py  main.py  main_mock.py  main_transfer_learning.py  main_transfer_learning_equipment.py  main_transfer_learning_meat.py  predict.py  predict_single.py  predict_util.py  pyproject.toml
api/: main_api.py  run_api.py
src/algorithm/: cnn_classifier.py  transfer_learning_classifier.py
src/evaluation/: evaluation.py  k_fold_cross_validation.py  transfer_learning_utils.py
src/preparation/: data_loader.py
